5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4378/executions/1577_2897.log
== TEST (2019-03-21 18:52:27) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = input int(5)

# Impressao do dobro do numero
print(num)
-- ERROR:
File "XXXX", line 4
    num = input int(5)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:52:48) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = input int(5)

# Impressao do dobro do numero
print(num * 2)
-- ERROR:
File "XXXX", line 4
    num = input int(5)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:53:07) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = input int("5")

# Impressao do dobro do numero
print(num * 2)
-- ERROR:
File "XXXX", line 4
    num = input int("5")
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:53:40) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(5))

# Impressao do dobro do numero
print(num * 2)
-- OUTPUT:
52468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:53:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(5))

# Impressao do dobro do numero
print(num * 2)
-- EXECUTION TIME:
0.166439
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
52468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
5888
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:53:53) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(5))

# Impressao do dobro do numero
print(num * 2)
-- OUTPUT:
52468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:54:20) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(5))
dobro=2

# Impressao do dobro do numero
print(num * dobro)
-- OUTPUT:
52468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:54:22) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(5))
dobro=2

# Impressao do dobro do numero
print(num * dobro)
-- EXECUTION TIME:
0.177155
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
52468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
5888
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:54:22) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(5))
dobro=2

# Impressao do dobro do numero
print(num * dobro)
-- OUTPUT:
52468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:54:43) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(5))
dobro=2

# Impressao do dobro do numero
print(5 * dobro)
-- OUTPUT:
510
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:54:44) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(5))
dobro=2

# Impressao do dobro do numero
print(5 * dobro)
-- EXECUTION TIME:
0.12636
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
510
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
510
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:54:46) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(5))
dobro=2

# Impressao do dobro do numero
print(5 * dobro)
-- OUTPUT:
510
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:54:48) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(5))
dobro=2

# Impressao do dobro do numero
print(5 * dobro)
-- OUTPUT:
510
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:54:49) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(5))
dobro=2

# Impressao do dobro do numero
print(5 * dobro)
-- EXECUTION TIME:
0.16652
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
510
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
510
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:54:49) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(5))
dobro=2

# Impressao do dobro do numero
print(5 * dobro)
-- OUTPUT:
510
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:55:29) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(5))
dobro=2

# Impressao do dobro do numero
print(5 * dobro)
-- EXECUTION TIME:
0.170743
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
510
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
510
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:55:30) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(5))
dobro=2

# Impressao do dobro do numero
print(5 * dobro)
-- OUTPUT:
510
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:56:09) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(5))


# Impressao do dobro do numero
print(2 * num)
-- OUTPUT:
52468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:56:10) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(5))


# Impressao do dobro do numero
print(2 * num)
-- EXECUTION TIME:
0.240815
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
52468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
5888
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:56:10) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(5))


# Impressao do dobro do numero
print(2 * num)
-- OUTPUT:
52468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:56:34) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10))


# Impressao do dobro do numero
print(2 * num)
-- OUTPUT:
102468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:56:35) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10))


# Impressao do dobro do numero
print(2 * num)
-- EXECUTION TIME:
0.143486
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
102468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
10888
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:56:36) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10))


# Impressao do dobro do numero
print(2 * num)
-- OUTPUT:
102468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:22:33) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero"))


# Impressao do dobro do numero
print(2 * num)
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:22:45) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero"))


# Impressao do dobro do numero
print(2 * num)
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:22:52) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero"))


# Impressao do dobro do numero
print(2 * num)
-- EXECUTION TIME:
0.170707
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
